--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,3 +1,8 @@
+.bodyWrap {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
 .headerLinkWrap {
   position: absolute;
   z-index: 999;
@@ -24,6 +29,31 @@
       font-size: $font-size-header;
       color: $white-text;
     }
+  }
+}
+.headerLink {
+  position: absolute;
+  z-index: 999;
+  top: 0;
+  left: 0;
+  right: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  .link {
+    text-decoration: none;
+    font-size: $font-size-header;
+    margin: 0 8rem;
+    color: $white-text;
+  }
+  .linke {
+    text-decoration: none;
+    font-size: $font-size-header;
+    color: $white-text;
+    margin: 0 8rem;
   }
 }
 
