--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,4 +1,13 @@
+.heroText{
+  position: absolute;
+  min-height: 100px;
+  top: 0;
+  bottom: 0;
+  left:0;
+  right:0;
+}
 .temp {
+position:relative;
   width: 100vw;
   height: 100vh;
   overflow: hidden;
