added some vids

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -36,7 +36,7 @@ body {
   font-family: "BrandonGrotesque", "Blogger", sans-serif;
   overflow-y: auto;
   overflow-x: hidden;
-  color: $background-grey;
+  color: $white-text;
 }
 html {
   font-size: 62.5%;
