--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -46,15 +46,59 @@
   text-align: center;
   font-size: 20rem;
 }
+.parallaxWrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 30rem;
+}
 .aboutContainer {
   font-size: 16px;
   font-family: "Montserrat", sans-serif;
+  color: black;
   & > div {
     width: 100vw;
     text-align: center;
   }
   & > div:not(:first-child) {
-    margin: 3rem 0;
+    //background: red;
+  }
+  & > div[class$="Container"] > div {
+    max-width: 75vw;
+    margin: 0 auto;
+  }
+}
+.editAboutContainer {
+  background-color: #f4f5f9;
+}
+.gameAboutContainer {
+  background-color: #f4f5f9;
+}
+.codeAboutContainer {
+  background-color: #f4f5f9;
+}
+.introAboutContainer {
+  background-color: #f4f5f9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.introAboutWrap {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  min-height: 30rem;
+
+  div {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    width: 20rem;
+    min-height: 5rem;
+    margin: auto;
   }
 }
 .descText {
@@ -73,7 +117,7 @@
 .introWork {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-content: center;
   justify-content: center;
   font-size: 2rem;
   height: 75vh;
@@ -97,14 +141,13 @@
   justify-content: center;
   font-family: "BrandonGrotesque", sans-serif;
   font-size: 3rem;
-  margin: 3rem;
   position: relative;
   &:after {
     content: "";
     position: absolute;
     bottom: 0;
     background-color: white;
-    height: 0.8rem;
+    height: 0.4rem;
     width: 12.5rem;
   }
 }
@@ -258,11 +301,16 @@
   flex-direction: row;
   justify-content: center;
   height: 100%;
+
   & > div {
     margin: auto;
-    padding: 0 6rem;
+    padding: 5rem 6rem;
     width: 50%;
   }
+}
+.meAboutContainer {
+  background-color: #f4f5f9;
+  color: black;
 }
 .aboutMeLeft {
   height: 100%;
