--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,4 +1,5 @@
 .heroText {
+  color: white;
   position: absolute;
   text-align: left;
   font-size: 3rem;
@@ -34,6 +35,10 @@
   z-index: -2;
   position: fixed;
 }
+.boldStyle {
+  font-weight: bold;
+  font-style: italic;
+}
 .imageWrap {
   position: fixed;
   width: 100vw;
@@ -50,7 +55,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 30rem;
+  height: 32rem;
 }
 .aboutContainer {
   font-size: 16px;
@@ -64,8 +69,32 @@
     //background: red;
   }
   & > div[class$="Container"] > div {
+    padding: 7rem 0 0rem 0;
     max-width: 75vw;
     margin: 0 auto;
+  }
+  & > div[class$="Container"] {
+    padding: 8rem 0 8rem 0;
+  }
+}
+.skillAboutContainer {
+  background-color: #f4f5f9;
+  justify-content: center;
+}
+.skillAboutWrap {
+  display: flex;
+  justify-content: space-around;
+  align-items: space-between;
+  flex-wrap: wrap;
+}
+.skillIcon {
+  background-color: yellow;
+  margin: 3rem 0;
+}
+.skillGone {
+  opacity: 0;
+  svg {
+    cursor: default !important;
   }
 }
 .editAboutContainer {
@@ -78,12 +107,13 @@
   background-color: #f4f5f9;
 }
 .introAboutContainer {
-  background-color: #f4f5f9;
+  background-color: darken(blue, 45%);
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .introAboutWrap {
+  color: white;
   display: flex;
   flex-grow: 1;
   flex-direction: row;
@@ -146,12 +176,22 @@
     content: "";
     position: absolute;
     bottom: 0;
+    background-color: black;
+    height: 0.4rem;
+    width: 12.5rem;
+  }
+}
+.aboutHeaderWhite {
+  color: white;
+  &:after {
+    content: "";
+    position: absolute;
+    bottom: 0;
     background-color: white;
     height: 0.4rem;
     width: 12.5rem;
   }
 }
-
 .columnWrap {
   width: 100%;
   height: 50%;
@@ -407,7 +447,6 @@
   width: 6vw;
   margin: 1rem 8vw;
   display: inline-block;
-  vertical-align: middle;
   cursor: pointer;
 }
 
