--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -82,13 +82,20 @@
   justify-content: center;
 }
 .skillAboutWrap {
+text-align:center;
   display: flex;
   justify-content: space-around;
   align-items: space-between;
   flex-wrap: wrap;
 }
 .skillIcon {
+position:relative;
+display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   margin: 3rem 0;
+  text-align:center;
 }
 .skillGone {
   opacity: 0;
@@ -97,30 +104,43 @@
   }
 }
 .skillHere {
+text-align:center;
   opacity: 1;
+  z-index:0;
 }
 .skillHeader {
+text-align:center;
   font-size: 10rem;
+  z-index:2;
+}
+.skillTemp{
+  z-index:2;
+
+}
+.skillSVG{
+  z-index: 2;
 }
 .skillBack {
-  position: fixed;
+  position: absolute;
   background-color: greenyellow;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
 }
-.skillBackGone {
-  display: inline-block;
+.skillBackGone {  
   background-color: greenyellow;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  width: 0;
-  height: 0;
+  position: absolute;
+  background-color: greenyellow;
+  top:2rem;
+
+
+  z-index: 1;
+  width: 0%;
+  height: 0%;
 }
+
 .skillFullScreen {
   display: flex;
   flex-direction: column;
@@ -132,6 +152,8 @@
   right: 0;
   bottom: 0;
   z-index: 100;
+  text-align:center;
+
 }
 .editAboutContainer {
   background-color: #f4f5f9;
